--- a/backend/package.json
+++ b/backend/package.json
@@ -25,7 +25,8 @@
     "mongoose": "^6.4.4",
     "multer": "^1.4.4",
     "sha256": "^0.2.0",
-    "typedi": "^0.10.0"
+    "typedi": "^0.10.0",
+    "web3": "^1.8.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
