--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@web3auth/web3auth": "^2.1.3",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "formik": "^2.2.9",
@@ -18,6 +19,8 @@
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.1",
     "web-vitals": "^2.1.4",
+    "web3": "^1.8.0",
+    "web3-eth": "^1.8.0",
     "yup": "^0.32.11"
   },
   "scripts": {
